Fixed alignment for recipes with long titles

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -51,6 +51,10 @@
     text-align:center;
 }
 
+#recipe-library .thumbnail {
+    height: 300px;
+}
+
 .thumbnail .caption-full {
     padding: 9px;
 }
